# bordereux

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  rules.json
alembic/: env.py
alembic/versions/: 3155dc5df8b1_initial_migration_create_bordereaux_.py  4c5123e36830_create_templates_table.py  e80068eedf9e_create_validation_errors_table.py
app/: config.py
app/core/: database.py  layout.py  logging.py  migrations.py
app/jobs/: poll_mailbox.py  process_new_files.py
app/models/: __init__.py  bordereaux.py  template.py  validation.py
app/routes/: files.py  health.py  mappings.py
app/services/: ai_suggestion_service.py  email_service.py  mapping_service.py  mapping_suggestion_service.py  normalization.py  parsing_service.py  pipeline_service.py  processing_service.py  storage_service.py  template_repository.py  validation_service.py
app/tests/: conftest.py  test_mapping.py  test_parsing.py  test_pipeline.py  (+2 more)
sample_files/: README.md  comprehensive_claims_1.xlsx  detailed_claims_1.xlsx  exposure_bordereaux_1.xlsx  mixed_format_1.xlsx  premium_bordereaux_1.xlsx  premium_bordereaux_2.xlsx  simple_premium_1.xlsx  standard_claims_1.xlsx  standard_claims_2.xlsx
scripts/: generate_sample_files.py  load_templates.py  reprocess_files.py
storage/: 114d2bbb_20251118_214929_test.xlsx  39db974d_20251118_215021_test1.xlsx  5ef73af3_20251118_212957_exposure_detailed_1.xlsx  b771a771_20251118_213434_test.xlsx  bd07cc57_20251118_222055_test1.xlsx
templates/: .gitkeep  example_claims_template.json  test1.json
validation_reports/: .gitkeep
(+21 files in other folders)
